# smhasher

./: .gitignore
src/: CMakeLists.txt  MurmurHash2.cpp  MurmurHash2.h  MurmurHash3.h  PMurHash.c
